--- a/maintainerr-deployment.yaml
+++ b/maintainerr-deployment.yaml
@@ -17,7 +17,15 @@ spec:
       labels:
         app: maintainerr
     spec:
-      #hostNetwork: true
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+                - key: tpu
+                  operator: NotIn
+                  values:
+                  - "true"
       containers:
       - name: maintainerr
         imagePullPolicy: "Always"
